Fixed spacing

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -38,7 +38,7 @@ body::-webkit-scrollbar-thumb {
 .sidebar {
     height: 100vh;
     top: 0;
-    @apply hidden flex-col w-full pt-6 sticky overflow-auto;
+    @apply hidden flex-col w-full pt-16 sticky overflow-auto;
 }
 
 .vertical{
